--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.version}</version>
         </dependency>
+         <!--sqlserver-->
+        <dependency>
+	        <groupId>com.microsoft.sqlserver</groupId>
+	        <artifactId>sqljdbc4</artifactId>
+	        <version>4.0</version>
+        </dependency>
         <!--druid-->
         <dependency>
             <groupId>com.alibaba</groupId>
