--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,15 +1,15 @@
 #\u6570\u636e\u5e93\u914d\u7f6e
-#driverClassName=com.mysql.jdbc.Driver
-#jdbc.driverClass =com.mysql.jdbc.Driver
-#jdbc.url =jdbc:mysql://139.129.129.128:3306/test
-#jdbc.username =dev
-#jdbc.password =Imwithop110.com
+driverClassName=com.mysql.jdbc.Driver
+jdbc.driverClass =com.mysql.jdbc.Driver
+jdbc.url =jdbc:mysql://139.129.129.128:3306/test
+jdbc.username =dev
+jdbc.password =Imwithop110.com
 
-driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-jdbc.driverClass =com.microsoft.sqlserver.jdbc.SQLServerDriver
-jdbc.url =jdbc:sqlserver://192.168.110.209:11433;DatabaseName=XQERP_DATA
-jdbc.username =erp
-jdbc.password =tontisa_2018
+#driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#jdbc.driverClass =com.microsoft.sqlserver.jdbc.SQLServerDriver
+#jdbc.url =jdbc:sqlserver://192.168.110.209:11433;DatabaseName=XQERP_DATA
+#jdbc.username =erp
+#jdbc.password =tontisa_2018
 
 validationQuery=SELECT 1
 jdbc.maxPoolSize=50
